Fixing nonnull alert